The subkey expiration change dialog should have a note "Your primary key expires on: <date>" and then limit the options to dates before that date. Since it does not make sense to have subkeys that have a longer validity then the primary key. Also the context menu entry should have an Icon to be consistent with the other context menu entries. And if none is set on the subkeys, show the expiration date of the primary key in that column for other subkeys since they automatically expire when the primary key expires.
Description
Description
Revisions and Commits
Revisions and Commits
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA42844179de29 Limit subkey expiration date to primary key expiration date | |||
| rKLEOPATRA97b3dab1cfdf Limit subkey expiration date to primary key expiration date | |||
| rKLEOPATRAa90ca24d1fea Show subkeys without expiry as expiring when the parent key expires | |||
| rKLEOPATRA4381b0872f49 Show subkeys without expiry as expiring when the parent key expires | |||
| rKLEOPATRAaae475d6d0de Show subkeys without expiry as expiring when the parent key expires | |||
| rKLEOPATRA84bc9aa3bcde Add icon to subkey validity change menu item | |||
| rKLEOPATRA353105160baa Limit subkey expiration date to primary key expiration date | |||
| rKLEOPATRAe8dad3a544b8 Limit subkey expiration date to primary key expiration date | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Testing | • TobiasFella | T6874 Kleopatra subkey management improvements | ||
| Open | None | T6553 Kleopatra: Expiry date issues and improvements | ||
| Resolved | • TobiasFella | T6878 Kleopatra: Subkey expiry date improvements |
Event Timeline
Comment Actions
And you could set the expiry date to a later date than the primary key (at least it was shown that way).
You can not choose a date after the one of the subkey.
Therefore the ticket is resolved as given in the description.
This is how it looked before (VSD 3.2.2):
And you could set the expiry date to a later date than the primary key (at least it was shown that way).
This is how it looks now, Version 3.2.2.2405000+git~ (Gpg4win-4.3.2-beta41) for a subkey which has no expiry date:
You can not choose a date after the one of the subkey.
Therefore the ticket is resolved as given in the description.
But the UX is bad, see T7215: Improve UX of "subkey expiry change" window for that.


