Add icon to subkey validity change menu item

GnuPG-bug-id: T6878